[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/display/capture1 - blurred.png" type="Texture" id=1]
[ext_resource path="res://assets/display/fonts/font_theme_tiny.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/display/fonts/font_theme_title.tres" type="DynamicFont" id=3]
[ext_resource path="res://logic/main_menu.gd" type="Script" id=4]

[node name="MainMenu" type="Node"]
pause_mode = 2
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -120.0
margin_bottom = -80.0
mouse_filter = 2

[node name="BackgroundImage" type="TextureRect" parent="Control"]
margin_left = -120.0
margin_top = -80.0
margin_right = 1800.0
margin_bottom = 1000.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="MainContainer" type="VBoxContainer" parent="Control"]
anchor_bottom = 1.0
custom_constants/separation = 34

[node name="TitleContainer" type="VBoxContainer" parent="Control/MainContainer"]
margin_right = 519.0
margin_bottom = 101.0

[node name="TitleText" type="Label" parent="Control/MainContainer/TitleContainer"]
margin_right = 519.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 3 )
text = "Explosional!"
align = 1
valign = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="Control/MainContainer"]
margin_top = 135.0
margin_right = 519.0
margin_bottom = 308.0

[node name="HBoxContainer2" type="VBoxContainer" parent="Control/MainContainer/ButtonsContainer"]
margin_right = 78.0
margin_bottom = 173.0
custom_constants/separation = 23

[node name="ResumeButton" type="Button" parent="Control/MainContainer/ButtonsContainer/HBoxContainer2"]
margin_right = 78.0
margin_bottom = 26.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../QuitButton")
focus_next = NodePath("../StartButton")
focus_previous = NodePath(".")
custom_fonts/font = ExtResource( 2 )
text = "Resume"

[node name="StartButton" type="Button" parent="Control/MainContainer/ButtonsContainer/HBoxContainer2"]
margin_top = 49.0
margin_right = 78.0
margin_bottom = 75.0
focus_neighbour_left = NodePath("../ResumeButton")
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_right = NodePath("../OptionsButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../ResumeButton")
custom_fonts/font = ExtResource( 2 )
text = "Start"

[node name="OptionsButton" type="Button" parent="Control/MainContainer/ButtonsContainer/HBoxContainer2"]
margin_top = 98.0
margin_right = 78.0
margin_bottom = 124.0
focus_neighbour_left = NodePath("../StartButton")
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_right = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../StartButton")
custom_fonts/font = ExtResource( 2 )
text = "Options"

[node name="QuitButton" type="Button" parent="Control/MainContainer/ButtonsContainer/HBoxContainer2"]
margin_top = 147.0
margin_right = 78.0
margin_bottom = 173.0
focus_neighbour_left = NodePath("../OptionsButton")
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../OptionsButton")
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="Control2" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -120.0
margin_bottom = -80.0
mouse_filter = 2

[node name="VersionContainer" type="VBoxContainer" parent="Control2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2

[node name="VersionText" type="Label" parent="Control2/VersionContainer"]
margin_right = 375.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "Explosional BETA v0.0.1 Build x 2022 McAwl"
valign = 1

[connection signal="button_up" from="Control/MainContainer/ButtonsContainer/HBoxContainer2/ResumeButton" to="." method="_on_ResumeButton_button_up"]
[connection signal="button_up" from="Control/MainContainer/ButtonsContainer/HBoxContainer2/StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="button_up" from="Control/MainContainer/ButtonsContainer/HBoxContainer2/OptionsButton" to="." method="_on_OptionsButton_button_up"]
[connection signal="button_up" from="Control/MainContainer/ButtonsContainer/HBoxContainer2/QuitButton" to="." method="_on_QuitButton_button_up"]
